--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="ЦДОД — образовательный центр для ваших детей — будущих инженеров, робототехников и разработчиков компьютерных программ. Телефон: +7 (8442) 24-00-81">
+    <meta name="keywords"
+        content="Arduino, C#, c sharp, python, анимация, волггту, волгоград, компьютерная графика, спецэффекты, дети, детские, дизайн, курсы, программирование, питон, политех, роботов, робот, роботы, робофабрика, робошкола, си шарп, современные курсы, цдод, цмит">
     <link rel="stylesheet" href="fonts/Rubik/RubikFont.min.css">
     <link rel="stylesheet" href="assets/mains/styles_reset.min.css">
     <link rel="stylesheet" href="assets/mains/aos.min.css">
@@ -12,11 +16,10 @@
     <link rel="stylesheet" href="assets/mains/main.min.css">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
     <link rel="shortcut icon" type="image/png" href="assets/logo_small.svg">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>ЦДОД</title>
     <meta name="yandex-verification" content="f2e801838a517225" />
 </head>
-
 <body>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -40,6 +43,8 @@
             document.body.outerHTML = ('<p style="text-align: center; line-height: 50px;"> <b>Ваш браузер не поддерживается.</b> <br />Пожалуйста, попробуйте: <b> <br> <a target="_blank" href="https://www.google.ru/chrome/">Google Chrome</a> <br> <a target="_blank" href="https://www.mozilla.org/ru/firefox/new/">Mozilla Firefox</a> <br> <a target="_blank" href="https://www.opera.com/ru">Opera</a> </b> </p>');
         }
     </script>
+
+
 
     <div class="course_modal" style="display: none; visibility: hidden;" id="modal_python">
         <div class="course_modal__inner">
@@ -214,7 +219,45 @@
         </div>
     </div>
 
+    <!-- <div class="subscribe">
+        <div class="subscribe__inner">
+            <div class="subscribe__contacts contacts__text">
 
+                <div class="yamap ratio3_2">
+                    <div class="loading_container">
+                        <div class="loading_box"></div>
+                    </div>
+                </div>
+                <p>
+                    <b>Вы можете найти нас по адресу:</b><br>
+                    ВолгГТУ, Высотный корпус (В), 14 этаж, ауд 1404<br>
+                    г. Волгоград, просп. им. В.И. Ленина, 28А
+                </p>
+                <p>
+                    <b>Телефон</b>:&#32;<a href="tel:+79178483220">+7 (917) 848-32-20</a>,&#32;<a
+                        href="tel:+78442240081">+7 (8442) 24-00-81</a>
+                </p>
+                <p>
+                    <b>E-mail</b>:&#32;<a href="mailto:cad@vstu.ru">cad@vstu.ru</a>
+                </p>
+                <div class="contacts__buttons">
+                    <a class="button" target="_blank" href="https://vk.com/robofabrica">
+                        <i class="icon-vk"></i><span>ЦДОД:РобоФабрика</span>
+                    </a>
+                    <a class="button" target="_blank" href="https://vk.com/cmit_lux">
+                        <i class="icon-vk"></i><span>ЦМИТ «ЛЮКС»</span>
+                    </a>
+                </div>
+
+            </div>
+            <div class="subscribe__frame">
+                <iframe
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSdK4ZXc_llgDowq7SpYI2vUJSZFdGU6ymmBDVHZep6hm502pQ/viewform?embedded=true"
+                    width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+            </div>
+
+        </div>
+    </div> -->
 
     <div class="course_modal" style="display: none; visibility: hidden;" id="modal_CSharp">
         <div class="course_modal__inner">
@@ -437,7 +480,8 @@
                 <p class="main__line" style="width: 35%"></p>
                 <a class="button" href="#contacts"><span>Записаться</span></a>
             </div>
-            <img width="516" height="473" class="main__right" data-aos="fade-right" src="assets/main_classroom.svg" alt="">
+            <img width="516" height="473" class="main__right" data-aos="fade-right" src="assets/main_classroom.svg"
+                alt="">
         </div>
     </section>
 
@@ -785,11 +829,11 @@
                         </div>
                         <div class="accordion__content">
                             <div class="accordion__line"></div>
-                            <p>Обучение проходит в опорном университете. У ВУЗа бессрочная образовательная&#32;<a
-                                    target="_blank"
-                                    href="http://www.vstu.ru/upload/sveden/document/Pril1_licen_VSTU_07.10.16.pdf">лицензия&#32;<i
-                                        style="font-size: 2rem;" class="icon-attach"></i></a>&#32;для обучения взрослых
-                                и детей (стр. 11).</p>
+                            <div>Обучение проходит в опорном университете. У ВУЗа бессрочная образовательная&#32;<a
+                                    class="underline" target="_blank"
+                                    href="http://www.vstu.ru/upload/sveden/document/Pril1_licen_VSTU_07.10.16.pdf">лицензия</a>&#32;для
+                                обучения взрослых
+                                и детей (стр. 11).</div>
                         </div>
                     </div>
                 </div>
@@ -828,6 +872,10 @@
                         <i class="icon-vk"></i><span>ЦМИТ «ЛЮКС»</span>
                     </a>
                 </div>
+                <p class="contacts__subscribe_text">Заполните форму и мы с Вами свяжемся:</p>
+                <a target="_blank"
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSdK4ZXc_llgDowq7SpYI2vUJSZFdGU6ymmBDVHZep6hm502pQ/viewform?usp=sf_link"
+                    class="button2 contacts__subscribe_button"><span>Оставить зявку</span></a>
             </div>
         </div>
     </section>
