--- a/index.html
+++ b/index.html
@@ -5,21 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- search -->
     <meta name="description"
         content="ЦДОД — образовательный центр для ваших детей — будущих инженеров, робототехников и разработчиков компьютерных программ. Телефон: +7 (8442) 24-00-81">
     <meta name="keywords"
-        content="Arduino, C#, c sharp, python, анимация, волггту, волгоград, компьютерная графика, спецэффекты, дети, детские, дизайн, курсы, программирование, питон, политех, роботов, робот, роботы, робофабрика, робошкола, си шарп, современные курсы, цдод, цмит">
-    <link rel="stylesheet" href="fonts/Rubik/RubikFont.min.css">
+        content="Arduino, c sharp, python, анимация, волггту, детская школа, детские курсы, детское образование, дополнительное образование детей, компьютерная графика, питон, политех, программирование, ребенок, робототехника, робофабрика, робошкола, секции для детей, си шарп, цдод, цмит">
+    <link rel="canonical" href="http://cdod.vstu.ru/" />
+    <!-- search -->
+    <!-- Socials -->
+    <meta property="og:image" content="http://cdod.vstu.ru/assets/cdod-social.png">
+    <meta property="og:image:alt"
+        content="ЦДОД — образовательный центр для ваших детей — будущих инженеров, робототехников и разработчиков компьютерных программ. Телефон: +7 (8442) 24-00-81">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="620">
+    <!-- Socials -->
     <link rel="stylesheet" href="assets/mains/styles_reset.min.css">
+    <link rel="stylesheet" href="fonts/Rubik/RubikFont.min.css">
     <link rel="stylesheet" href="assets/mains/aos.min.css">
     <link rel="stylesheet" href="assets/mains/icofont.min.css">
     <link rel="stylesheet" href="assets/mains/main.min.css">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
-    <link rel="shortcut icon" type="image/png" href="assets/logo_small.svg">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/logo_small.svg">
     <title>ЦДОД</title>
     <meta name="yandex-verification" content="f2e801838a517225" />
 </head>
+
 <body>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -38,12 +50,22 @@
         <div><img src="https://mc.yandex.ru/watch/84547264" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-206568236-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-206568236-1');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script>
         if (/(MSIE|Triden|Edge)/.test(navigator.userAgent)) {
-            document.body.outerHTML = ('<p style="text-align: center; line-height: 50px;"> <b>Ваш браузер не поддерживается.</b> <br />Пожалуйста, попробуйте: <b> <br> <a target="_blank" href="https://www.google.ru/chrome/">Google Chrome</a> <br> <a target="_blank" href="https://www.mozilla.org/ru/firefox/new/">Mozilla Firefox</a> <br> <a target="_blank" href="https://www.opera.com/ru">Opera</a> </b> </p>');
+            document.body.outerHTML = (html`<p style="text-align: center; line-height: 50px;"> <b>Ваш браузер не поддерживается.</b> <br />Пожалуйста, попробуйте: <b> <br> <a target="_blank" href="https://www.google.ru/chrome/">Google Chrome</a> <br> <a target="_blank" href="https://www.mozilla.org/ru/firefox/new/">Mozilla Firefox</a> <br> <a target="_blank" href="https://www.opera.com/ru">Opera</a> </b> </p>`);
         }
     </script>
-
 
 
     <div class="course_modal" style="display: none; visibility: hidden;" id="modal_python">
@@ -219,8 +241,14 @@
         </div>
     </div>
 
-    <!-- <div class="subscribe">
+    <div class="subscribe">
         <div class="subscribe__inner">
+            <div class="subscribe__frame">
+                <div class="loading_container">
+                    <div class="loading_box"></div>
+                </div>
+            </div>
+
             <div class="subscribe__contacts contacts__text">
 
                 <div class="yamap ratio3_2">
@@ -250,14 +278,14 @@
                 </div>
 
             </div>
-            <div class="subscribe__frame">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSdK4ZXc_llgDowq7SpYI2vUJSZFdGU6ymmBDVHZep6hm502pQ/viewform?embedded=true"
-                    width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
-            </div>
 
+            <button class="button subscribe__close">
+                <svg width="40" height="40" viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M.609.657a2.16 2.16 0 0 0 .046 3.052L16.945 20 .656 36.291a2.162 2.162 0 0 0 .686 3.548 2.159 2.159 0 0 0 2.368-.493L20 23.055l16.291 16.29a2.16 2.16 0 1 0 3.055-3.054l-16.291-16.29 16.29-16.292A2.16 2.16 0 1 0 36.292.655l-16.29 16.29L3.708.656a2.16 2.16 0 0 0-3.1.002z" />
+                </svg></button>
         </div>
-    </div> -->
+    </div>
 
     <div class="course_modal" style="display: none; visibility: hidden;" id="modal_CSharp">
         <div class="course_modal__inner">
@@ -478,7 +506,8 @@
                 <p class="main__text" data-aos="fade-up">при кафедре САПРиПК <br> и ЦМИТ «ЛЮКС», ВолгГТУ</p>
                 <p class="main__text strong" data-aos="fade-up">Изобретай будущее с нами!</p>
                 <p class="main__line" style="width: 35%"></p>
-                <a class="button" href="#contacts"><span>Записаться</span></a>
+                <button class="button" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button" href="#contacts"><span>Записаться</span></a> -->
             </div>
             <img width="516" height="473" class="main__right" data-aos="fade-right" src="assets/main_classroom.svg"
                 alt="">
@@ -895,7 +924,7 @@
     </footer>
 
     <script src="assets/mains/aos.min.js"></script>
-    <script src="assets/mains/main.min.js"></script>
+    <script src="assets/mains/main.js"></script>
 </body>
 
 </html>
