--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +177,8 @@
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b>&#32;<span>+ комплектующие</span>
                 </p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -231,7 +233,8 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -322,7 +325,8 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -376,7 +380,8 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -433,7 +438,8 @@
             </div>
             <div class="course_modal__button">
                 <p><b>16 900 ₽</b></p>
-                <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a>
+                <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                <!-- <a class="button2" href="#contacts" data-close=""><span>Записаться</span></a> -->
             </div>
             <button class="button course_modal__close" style="margin: 0;" data-close="">
                 <svg viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -590,7 +596,8 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_python"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
                 <div class="courses__card c__robo" data-aos="fade-up">
@@ -601,7 +608,8 @@
                     <p>с 8 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_robo"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
                 <div class="courses__card c__3d" data-aos="fade-up">
@@ -612,7 +620,8 @@
                     <p>с 11 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_treeD"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
             </div>
@@ -628,7 +637,8 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_CSharp"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
                 <div class="courses__card c__android" data-aos="fade-up">
@@ -639,7 +649,8 @@
                     <p>с 12 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_Android"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
                 <div class="courses__card c__2d" data-aos="fade-up">
@@ -650,7 +661,8 @@
                     <p>с 10 лет</p>
                     <div class="courses__card__buttons">
                         <button class="button info_open" data-modal="modal_twoD"><span>Подробнее</span></button>
-                        <a class="button2" href="#contacts"><span>Записаться</span></a>
+                        <button class="button2" data-subscr_btn=""><span>Записаться</span></button>
+                        <!-- <a class="button2" href="#contacts"><span>Записаться</span></a> -->
                     </div>
                 </div>
             </div>
@@ -902,9 +914,9 @@
                     </a>
                 </div>
                 <p class="contacts__subscribe_text">Заполните форму и мы с Вами свяжемся:</p>
-                <a target="_blank"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSdK4ZXc_llgDowq7SpYI2vUJSZFdGU6ymmBDVHZep6hm502pQ/viewform?usp=sf_link"
-                    class="button2 contacts__subscribe_button"><span>Оставить зявку</span></a>
+                <button class="button2 contacts__subscribe_button" data-subscr_btn=""><span>Оставить
+                        зявку</span></button>
+                <!-- <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdK4ZXc_llgDowq7SpYI2vUJSZFdGU6ymmBDVHZep6hm502pQ/viewform?usp=sf_link" class="button2 contacts__subscribe_button"><span>Оставить зявку</span></a> -->
             </div>
         </div>
     </section>
