--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
     </footer>
 
     <script src="assets/mains/aos.min.js"></script>
-    <script src="assets/mains/main.js"></script>
+    <script src="assets/mains/main.min.js"></script>
 </body>
 
 </html>
